src/test/deca/context/invalid/fields/field_inherited_then_redeclared_illegal.deca
// Description :
//    Redéclaration illégale d'un champ hérité.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 13 : Le champ x est déjà défini dans cette classe ou hérité

class A {
    int x;
}

class B extends A {
    int x;
}

{
}

